# VinaSF_PyTorch

./: LICENSE  README.md  pyproject.toml
opendock/: README.md
opendock/opendock/sampler/: base.py  particle_swarm.py
opendock/opendock/scorer/: vina.py
vinasf_torch/: __init__.py  model.py  rdkit_adapter.py  utils.py  vinasf.py
vinasf_torch/core/: __init__.py  utils.py
vinasf_torch/scorer/: __init__.py  base.py  vina.py  vinasf.py
